# reordering

./: .gitignore  CMakeLists.txt  README.md  branchAndBound.cpp  branchAndBound.h  build.sh  common.h  exhaustive.cpp  exhaustive.h  main.cpp
test/: CMakeLists.txt  branchAndBoundTests.cpp
